data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureVillagePieces.Hall.md
---
title: "StructureVillagePieces.Hall"
description: "public static class StructureVillagePieces.Hall extends StructureVillagePieces.Village"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureVillagePieces.Hall.html"
sourceType: javadoc
---

# StructureVillagePieces.Hall

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Hall

## Class signature

```java
public static class StructureVillagePieces.Hall extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `static StructureVillagePieces.Hall func_74906_a(StructureVillagePieces.Start p_74906_0_, java.util.List p_74906_1_, java.util.Random p_74906_2_, int p_74906_3_, int p_74906_4_, int p_74906_5_, int p_74906_6_, int p_74906_7_)`
- `protected int getVillagerType(int p_74888_1_)`

## Fields

- `Hall`
- `Hall`
