data/forge_javadoc/1.8.9/raw/net/minecraft/world/gen/structure/StructureVillagePieces.Hall.md
---
title: "StructureVillagePieces.Hall"
description: "public static class StructureVillagePieces.Hall extends StructureVillagePieces.Village"
package: "net/minecraft/world/gen/structure"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/world/gen/structure/StructureVillagePieces.Hall.html"
sourceType: javadoc
---

# StructureVillagePieces.Hall

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Hall

## Class signature

```java
public static class StructureVillagePieces.Hall extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)` — second Part of Structure generating, this for example places Spiderwebs, Mob Spawners, it closes Mineshafts at the end, it adds Fences...
- `static StructureVillagePieces.Hall func_175857_a(StructureVillagePieces.Start start, java.util.List<StructureComponent> p_175857_1_, java.util.Random rand, int p_175857_3_, int p_175857_4_, int p_175857_5_, EnumFacing facing, int p_175857_7_)`
- `protected int func_180779_c(int p_180779_1_, int p_180779_2_)`

## Fields

- `Hall`
- `Hall`
